fix word-break in log_entry diff

--- a/app/assets/stylesheets/blocks/b-log_entry.sass
+++ b/app/assets/stylesheets/blocks/b-log_entry.sass
@@ -88,6 +88,8 @@
         padding-right: 5px
 
       .diff
+        word-break: break-word
+
         del,
         ins
           padding: 0 2px
